--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="{{ path('crm_dashboard') }}">CRM Dashboard</a></li>
         <li><a href="{{ path('crm_admin_entity_list') }}">CRM Entites</a></li>
+        <li><a href="{{ path('crm_info') }}">CRM Info</a></li>
     </ul>
 </div>
 {% endblock %}
