* form builder updated * complex page updated

--- a/templates/admin/complex_page.html.twig
+++ b/templates/admin/complex_page.html.twig
@@ -7,7 +7,7 @@
             <h3 class="box-title">Singer form</h3>
         </div>
         <div class="box-body">
-            singer form
+            {% include 'admin/complex_page.form.singer.html.twig' with {'form': singerForm} %}
         </div>
     </div>
 
