* new entity create strategy

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,9 +13,8 @@
 
     Maybe you would like to visit these pages:
     <ul>
-        <li><a href="{{ path('crm_dashboard') }}">CRM Dashboard</a></li>
-        <li><a href="{{ path('crm_admin_entity_list') }}">CRM Entites</a></li>
-        <li><a href="{{ path('crm_info') }}">CRM Info</a></li>
+        <li><a href="{{ path('crm_dashboard') }}">CRM</a></li>
+        <li><a href="{{ path('crm_settings_dashboard') }}">CRM Settings</a></li>
     </ul>
 </div>
 {% endblock %}
