--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,8 +13,7 @@
 
     Maybe you would like to visit these pages:
     <ul>
-        <li><a href="{{ path('crm_dashboard') }}">CRM</a></li>
-        <li><a href="{{ path('crm_settings_dashboard') }}">CRM Settings</a></li>
+        <li><a href="{{ path('crm_settings_homepage') }}">CRM Settings</a></li>
     </ul>
 </div>
 {% endblock %}
