--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,6 +13,7 @@
 
     Maybe you would like to visit these pages:
     <ul>
+        <li><a href="{{ path('test') }}">test</a></li>
         <li><a href="{{ path('crm_settings_homepage') }}">CRM Settings</a></li>
     </ul>
 </div>
