--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -14,6 +14,7 @@
     Maybe you would like to visit these pages:
     <ul>
         <li><a href="{{ path('test') }}">test</a></li>
+        <li><a href="{{ path('crm_samples_homepage') }}">Samples</a></li>
         <li><a href="{{ path('crm_settings_homepage') }}">CRM Settings</a></li>
     </ul>
 </div>
