--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -3,19 +3,30 @@
 {% block title %}Homepage{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+        }
 
-<div class="example-wrapper">
-    <h1>Hello!</h1>
+        .example-wrapper code {
+            background: #F5F5F5;
+            padding: 2px 6px;
+        }
+    </style>
 
-    Maybe you would like to visit these pages:
-    <ul>
-        <li><a href="{{ path('test') }}">test</a></li>
-        <li><a href="{{ path('crm_samples_homepage') }}">Samples</a></li>
-        <li><a href="{{ path('crm_settings_homepage') }}">CRM Settings</a></li>
-    </ul>
-</div>
+    <div class="example-wrapper">
+        <h1>Hello!</h1>
+
+        Maybe you would like to visit these pages:
+        <ul>
+            <li>Examples</li>
+            <ul>
+                <li><a href="{{ path('examples_datasheets') }}">Datasheets</a></li>
+            </ul>
+            <li><a href="{{ path('crm_settings_homepage') }}">CRM Settings</a></li>
+        </ul>
+    </div>
 {% endblock %}
