--- a/templates/examples/examples.datasheets.html.twig
+++ b/templates/examples/examples.datasheets.html.twig
@@ -3,15 +3,21 @@
 {% block content %}
 
     <div class="box">
-        <div class="box-header">Simple datasheet</div>
-        <div class="box-body">{{ datasheet(simpleDatasheet) }}</div>
-        <div class="box-footer">{{ pagination(simpleDatasheet) }}</div>
+        <div class="box-header">Array datasheet</div>
+        <div class="box-body">{{ datasheet(arrayDatasheet) }}</div>
+        <div class="box-footer">{{ pagination(arrayDatasheet) }}</div>
     </div>
 
     <div class="box">
-        <div class="box-header">Advanced datasheet</div>
-        <div class="box-body">{{ datasheet(advancedDatasheet) }}</div>
-        <div class="box-footer">{{ pagination(advancedDatasheet) }}</div>
+        <div class="box-header">Query builder datasheet</div>
+        <div class="box-body">{{ datasheet(queryBuilderDatasheet) }}</div>
+        <div class="box-footer">{{ pagination(queryBuilderDatasheet) }}</div>
+    </div>
+
+    <div class="box">
+        <div class="box-header">Advanced query builder datasheet</div>
+        <div class="box-body">{{ datasheet(advancedQueryBuilderDatasheet) }}</div>
+        <div class="box-footer">{{ pagination(advancedQueryBuilderDatasheet) }}</div>
     </div>
 
 {%  endblock %}
