--- a/templates/examples/examples.datasheets.html.twig
+++ b/templates/examples/examples.datasheets.html.twig
@@ -14,10 +14,10 @@
         <div class="box-footer">{{ pagination(queryBuilderDatasheet) }}</div>
     </div>
 
-{#    <div class="box">#}
-{#        <div class="box-header">Advanced query builder datasheet</div>#}
-{#        <div class="box-body">{{ datasheet(advancedQueryBuilderDatasheet) }}</div>#}
-{#        <div class="box-footer">{{ pagination(advancedQueryBuilderDatasheet) }}</div>#}
-{#    </div>#}
+    <div class="box">
+        <div class="box-header">Advanced query builder datasheet</div>
+        <div class="box-body">{{ datasheet(advancedQueryBuilderDatasheet) }}</div>
+        <div class="box-footer">{{ pagination(advancedQueryBuilderDatasheet) }}</div>
+    </div>
 
 {%  endblock %}
