--- a/templates/examples/examples.datasheets.html.twig
+++ b/templates/examples/examples.datasheets.html.twig
@@ -2,22 +2,22 @@
 
 {% block content %}
 
-    <div class="box">
-        <div class="box-header">Array datasheet</div>
-        <div class="box-body">{{ datasheet(arrayDatasheet) }}</div>
-        <div class="box-footer">{{ pagination(arrayDatasheet) }}</div>
-    </div>
+{#    <div class="box">#}
+{#        <div class="box-header">Array datasheet</div>#}
+{#        <div class="box-body">{{ datasheet(arrayDatasheet) }}</div>#}
+{#        <div class="box-footer">{{ pagination(arrayDatasheet) }}</div>#}
+{#    </div>#}
 
 {#    <div class="box">#}
 {#        <div class="box-header">Query builder datasheet</div>#}
 {#        <div class="box-body">{{ datasheet(queryBuilderDatasheet) }}</div>#}
 {#        <div class="box-footer">{{ pagination(queryBuilderDatasheet) }}</div>#}
 {#    </div>#}
-{##}
-{#    <div class="box">#}
-{#        <div class="box-header">Advanced query builder datasheet</div>#}
-{#        <div class="box-body">{{ datasheet(advancedQueryBuilderDatasheet) }}</div>#}
-{#        <div class="box-footer">{{ pagination(advancedQueryBuilderDatasheet) }}</div>#}
-{#    </div>#}
+
+    <div class="box">
+        <div class="box-header">Advanced query builder datasheet</div>
+        <div class="box-body">{{ datasheet(advancedQueryBuilderDatasheet) }}</div>
+        <div class="box-footer">{{ pagination(advancedQueryBuilderDatasheet) }}</div>
+    </div>
 
 {%  endblock %}
