--- a/templates/examples/examples.datasheets.html.twig
+++ b/templates/examples/examples.datasheets.html.twig
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-    <div class="box">
-        <div class="box-header">Array datasheet</div>
-        <div class="box-body">{{ datasheet(arrayDatasheet) }}</div>
-        <div class="box-footer">{{ pagination(arrayDatasheet) }}</div>
-    </div>
+{#    <div class="box">#}
+{#        <div class="box-header">Array datasheet</div>#}
+{#        <div class="box-body">{{ datasheet(arrayDatasheet) }}</div>#}
+{#        <div class="box-footer">{{ pagination(arrayDatasheet) }}</div>#}
+{#    </div>#}
 
     <div class="box">
         <div class="box-header">Query builder datasheet</div>
