--- a/templates/examples/examples.forms.html.twig
+++ b/templates/examples/examples.forms.html.twig
@@ -11,6 +11,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label class="col-sm-4 control-label">{{ bookForm.fields['lastReadAt'].title|trans }}</label>
+        <div class="col-sm-8">
+            {{ form_field(bookForm.fields['lastReadAt']) }}
+        </div>
+    </div>
+
     <input type="submit" value="Submit">
 
 </form>
